# platform.core.connectivity.bt-syspopup

./: AUTHORS  CMakeLists.txt  LICENSE.Flora  org.tizen.bt-syspopup.manifest  project.config
data/: custom_popup.edc  custom_popup_m.edc  custom_popup_w.edc  org.tizen.bt-syspopup.desktop.in  org.tizen.bt-syspopup.rule  org.tizen.bt-syspopup.xml
data/groups/: auth_popup.edc  passkey_confirm.edc  passkey_confirm_popup.edc  passwd_popup.edc
debian/: changelog  control  org.tizen.bt-syspopup.install.in  rules
packaging/: org.tizen.bt-syspopup.spec
src/: bt-syspopup-m.c  bt-syspopup-m.h  bt-syspopup-w.c  bt-syspopup-w.h  bt-syspopup.c  bt-syspopup.h
tables/: org.tizen.bt-syspopup_ChangeableColorTable.xml  org.tizen.bt-syspopup_FontInfoTable.xml
